repository methods add